# climate-hack

./: pyproject.toml
prototypes/go-thorium/: Makefile  go.mod  go.sum  gqlgen.yml  main.go
prototypes/go-thorium/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
prototypes/go-thorium/graph/model/: models_gen.go
prototypes/go-thorium/thoriumfacts/: models.go  repository.go  thoriumfacts.go  twilio_handlers.go
salt/: README.md  app.vue  hold.html  nuxt.config.ts  package-lock.json  package.json
salt/components/: AboutSaltReactors.vue  Conversation.vue  SignupNonBeliever.vue  Welcome.vue
salt/pages/: index.vue
server/: Makefile  pyproject.toml
