[tool.poetry]
name = "climate-ai-hackathon"
version = "0.1.0"
description = ""
authors = ["Fraser Isbester <fraserisbester@gmail.com>"]
readme = "README.md"
packages = [{include = "climate_ai_hackathon"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
