[tool.poetry]
name = "climate-ai-hackathon"
version = "0.1.0"
description = ""
authors = ["Fraser Isbester <fraserisbester@gmail.com>"]
readme = "README.md"
packages = [{include = "climate_ai_hackathon"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
